# blacc

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  TODO  azure-pipelines.yml  bar  baz
.github/ISSUE_TEMPLATE/: bug_report.md  style-issue.md
src/: main.rs
